--- a/stu_info_system/student/templates/login.html
+++ b/stu_info_system/student/templates/login.html
@@ -58,6 +58,9 @@
 		text-decoration: none;
 		color: #fff;
 	}
+	.form1 form h3 {
+		color: #fff;
+	}
 	</style>
 </head>	
 <body>
@@ -66,7 +69,7 @@
 				<h3><a href="/home/">返回</a></h3>
 				<form active="" method="post">
 					{% csrf_token %}
-					<h1>{{ error }}</h1>
+					<h3>{{ error }}</h3>
 						<input type="text" name="user" placeholder="账号" autocomplete="off">
 						<input type="password" name="password" placeholder="密码">
 						<input type="submit" value="确定">
