--- a/stu_info_system/student/templates/stuinfo.html
+++ b/stu_info_system/student/templates/stuinfo.html
@@ -36,7 +36,7 @@
 </head>
 <body>
 <div id="background" class="wall">
-	<h3><a href="/home/">首页 | </a><a href="/home/slogin/">注销 | </a><a href="/home/modify/">修改</a></h3>
+	<h3><a href="/home/">首页 | </a><a href="/home/slogout/">注销 | </a><a href="/home/modify/">修改</a></h3>
 	<div class="main">
 		<table align="center">
 			<tr>
