--- a/stu_info_system/student/templates/index.html
+++ b/stu_info_system/student/templates/index.html
@@ -48,10 +48,10 @@ background: url("{% static 'preview.jpg' %}")no-repeat;
 <div id="background" class="wall">
     <div class="main">    
         <ul class="navigation">
-	   <li><a href="#">首页</a></li>
+	   <li><a href="admin/">管理员后台</a></li>
         <li><a href="#">新生信息输入</a></li>
         <li><a href="#">教务信息输入</a></li>
-        <li><a href="slogin/">个人信息查询修改</a></li>
+        <li><a href="#">个人信息查询修改</a></li>
     </div>
 </ul>
 <div>
